fix article background

--- a/src/sass/partials/_article.scss
+++ b/src/sass/partials/_article.scss
@@ -188,8 +188,8 @@
         }
         &__bg {
             background:
-                url("../../resources/img/content-syndicator-bg.webp"),
-                url("../../resources/img/content-syndicator-bg.png") no-repeat;
+                url("../resources/img/content-syndicator-bg.webp"),
+                url("../resources/img/content-syndicator-bg.png") no-repeat;
             background-size: cover;
         }
         .b-article{
