fixed mobile design Case study

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 // include media defaults
 $breakpoints: (
-  'phoneSm': 320px,
-//  'phoneMd': 376px,
+  'phoneSm': 320px, 
+  'phoneMd': 376px,
   'phoneLg': 480px,
   'tabletSm': 768px,
   'tabletLg': 1024px,
