--- a/src/sass/partials/_caseStudy.scss
+++ b/src/sass/partials/_caseStudy.scss
@@ -27,6 +27,10 @@
   
   &__title {
     color: $black;
+
+    @include media('<phoneMd'){
+      text-align: center;
+    }
     
     &-fc {
       padding-top: 15px;
@@ -66,6 +70,21 @@
       top: -150px;
       right: 80px;
       transform: rotate(10deg);
+
+      @include media('<tabletSm'){
+        right: 20px;
+      }
+
+      @include media('<phoneLg'){
+        width: 150px;
+        height: 220px;
+        top: -100px;
+        right: 0;
+      }
+
+      @include media('<phoneMd'){
+        display: none;
+      }
     }
     
     &-block {
@@ -107,11 +126,15 @@
   url("../resources/img/case-study/article-bg.jpg") no-repeat right top;
   background-size: contain;
 
-  @include media('<laptop'){
+  @include media('<hd'){
     background-size: cover;
   }
 
-  @include media('<tabletLg'){
+  @include media('<laptop'){
+    background-position: 55% 0;
+  }
+
+  @include media('<desktop'){
     background: $white;
   }
 }
@@ -124,7 +147,7 @@
   }
   
   &__container {
-    width: 50%;
+    width: 40%;
     
     @include media('<desktop'){
       width: 100%;
