applied responsive design for syndicator page

--- a/src/sass/partials/_instructions.scss
+++ b/src/sass/partials/_instructions.scss
@@ -69,8 +69,7 @@
   }
   
   &__desc {
-    margin-right: -50px;
-    padding: 20px 30px;
+    padding: 20px 0 20px 40px;
     color: $white;
   }
 }
