--- a/src/sass/partials/_tabs.scss
+++ b/src/sass/partials/_tabs.scss
@@ -83,6 +83,10 @@
       justify-content: center;
       align-items: center;
       margin: 0 10px;
+      
+      & img {
+        width: 195px;
+      }
     }
   }
 }
