--- a/src/sass/partials/_software.scss
+++ b/src/sass/partials/_software.scss
@@ -4,8 +4,64 @@
   url("../resources/img/content-syndicator-software.jpg") no-repeat right top;
   background-size: cover;
 
+  @include media('<desktop') {
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  @include media('<tabletLg') {
+    height: 100%;
+    background: $white no-repeat center center;
+  }
+  
+  &__wr {
+    @include media('<tabletLg') {
+      position: static;
+      padding-bottom: 0;
+    }
+  }
+  
+  &__container {
+    @include media('<tabletLg') {
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+  }
+  
+  &__container-tablet {
+    display: none;
+    max-height: 650px;
+    
+    & img {
+      width: 100%;
+      max-height: 650px;
+    }
+
+    @include media('<tabletLg') {
+      display: block;
+    }
+  }
+  
+  &__title {
+    @include media('<tabletLg') {
+      padding-left: 30px;
+    }
+
+    @include media('<tabletSm') {
+      padding-left: 0;
+    }
+
+    @include media('<phoneLg') {
+      padding-left: 30px;
+    }
+  }
+  
   &__item {
     width: 100%;
+
+    @include media('<tabletLg') {
+      padding-left: 30px;
+    }
   }
   
   &__item-title {
