--- a/src/sass/partials/_instructions.scss
+++ b/src/sass/partials/_instructions.scss
@@ -1,33 +1,30 @@
 .b-instructions {
   padding: 40px 25px;
-  
+
   &__title {
     font-size: 30px;
     font-weight: 500;
     color: $white;
     text-align: center;
   }
-  
+
   &__content {
     padding: 40px 50px 40px 0;
     display: flex;
+    justify-content: center;
   }
 }
 
 .b-instruction {
   &__container {
     min-width: 300px;
-    max-width: 400px;
+    max-width: 500px;
 
-    @include media('<phoneLg') {
-      max-width: 350px;
-    }
-
-    @include media('<phoneLg') {
-      max-width: 300px;
+    @include media('<tabletLg') {
+      max-width: 100%;
     }
   }
-  
+
   &__label {
     height: 120px;
     background-image: linear-gradient(80deg, $white, #ffd15c 70%);
@@ -36,7 +33,7 @@
     position: relative;
     border-top-left-radius: 60px;
     border-bottom-left-radius: 60px;
-    
+
     &::before {
       content: '';
       border: 60px solid transparent;
@@ -70,15 +67,19 @@
       fill: currentColor;
     }
   }
-  
+
   &__title {
     font-size: 22px;
     margin-left: 15px;
     text-transform: uppercase;
   }
-  
+
   &__desc {
     padding: 20px 0 20px 40px;
     color: $white;
+
+    @include media('<tabletLg') {
+      padding-left: 50px;
+    }
   }
 }
