--- a/src/sass/partials/_article.scss
+++ b/src/sass/partials/_article.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
   }
   &__wr-syndicator {
-    @include media('<tabletSm') {
+    @include media('<phoneLg') {
       margin-top: 250px;
       padding-bottom: 0;
       padding-top: 0;
@@ -110,13 +110,6 @@
     }
   }
   &__content-syndicator {
-    @include media('<tabletSm') {
-      position: absolute;
-      top: -245px;
-      left: 0;
-      padding: 20px 15px;
-    }
-
     @include media('<phoneLg') {
       position: absolute;
       top: -260px;
@@ -133,7 +126,7 @@
     @include media('<desktop') {
       margin-bottom: 15px;
     }
-    @include media('<tabletSm') {
+    @include media('<phoneLg') {
       margin-bottom: 9px;
     }
   }
@@ -141,7 +134,7 @@
     color: $white;
     font-weight: 500;
 
-    @include media('<tabletSm') {
+    @include media('<phoneLg') {
       font-size: 14px;
     }
   }
@@ -156,21 +149,15 @@
       font-weight: 600;
       text-transform: uppercase;
 
-      @include media('<tabletSm') {
-        color: $black;
-        font-size: 25px;
-      }
       @include media('<phoneLg') {
+        color: $black;
         font-size: 20px;
       }
     }
 
     & .secondary {
       font-size: 25px;
-
-      @include media('<tabletSm') {
-        font-size: 20px;
-      }
+      
       @include media('<phoneLg') {
         font-size: 18px;
       }
