Fixes of syndicator page

--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -35,7 +35,14 @@
         svg{
             fill: currentColor;
         }
+        
+        &-syndicator {
+            @include media('<tabletLg'){
+                padding-top: 0;
+            }
+        }
     }
+    
     &__content{
         
     }
