--- a/src/sass/partials/_case.scss
+++ b/src/sass/partials/_case.scss
@@ -153,3 +153,11 @@
     }
   }
 }
+
+@media only screen and (min-width: 1920px) {
+  .b-case-syndicator {
+    &__desc {
+      margin-right: -80px;
+    }
+  }
+}
