--- a/src/sass/partials/_targets.scss
+++ b/src/sass/partials/_targets.scss
@@ -83,6 +83,10 @@
     svg {
       fill: currentColor;
     }
+    
+    &-syndicator {
+      padding-top: 5px;
+    }
   }
 
   &__title {
@@ -228,6 +232,7 @@
 
   &__icon-rotated {
     transform: rotate(-40deg);
+    margin-top: -2px;
   }
 
   &__bottom-title {
