--- a/src/sass/partials/_caseStudy.scss
+++ b/src/sass/partials/_caseStudy.scss
@@ -3,7 +3,7 @@
       url("../resources/img/case-study/shutterstock.jpg") no-repeat left top,
       url("../resources/img/case-study/shutterstock2.jpg") no-repeat right top;
   background-size: contain;
-  
+
   &__content {
     display: flex;
     max-width: 1366px;
@@ -14,11 +14,11 @@
     @extend %wrapper;
     @include gradient__active_angled;
   }
-  
+
   &__container {
     width: 50%;
     padding: 100px 0 100px 50px;
-    
+
     &:first-child {
       width: 45%;
 
@@ -32,19 +32,19 @@
       width: 100%;
     }
   }
-  
+
   &__title {
     color: $black;
 
     @include media('<phoneMd'){
       text-align: center;
     }
-    
+
     &-fc {
       padding-top: 15px;
     }
   }
-  
+
   &__desc-primary {
     padding-top: 20px;
     color: $white;
@@ -58,7 +58,7 @@
       font-size: 24px;
     }
   }
-  
+
   &__desc-title {
     font-size: 22px;
     text-transform: uppercase;
@@ -69,10 +69,10 @@
     font-weight: 500;
     padding-top: 10px;
   }
-  
+
   &__form {
     padding-top: 50px;
-    
+
     &-img {
       background: url(../resources/img/case-study/case-study.jpg) no-repeat right top;
       width: 200px;
@@ -98,7 +98,7 @@
         display: none;
       }
     }
-    
+
     &-block {
       width: 90%;
       z-index: 2;
@@ -107,7 +107,7 @@
         width: 100%;
       }
     }
-    
+
     &-subtitle {
       color: $white;
     }
@@ -117,10 +117,10 @@
 .b-case-study-social {
   margin-left: 0;
   padding: 25px 0;
-  
+
   &__link {
     padding-left: 0;
-    
+
     svg{
       fill: $black;
     }
@@ -158,37 +158,39 @@
     padding-bottom: 0;
     padding-left: 0;
   }
-  
+
   &__container {
     width: 40%;
-    
+
     @include media('<desktop'){
       width: 100%;
     }
-    
+
     & article {
       @include media('<laptop'){
         padding: 0 50px;
       }
     }
   }
-  
+
   &__title {
     font-size: 22px;
     color: $active;
     font-weight: 500;
     padding: 50px 0 20px 0;
   }
-  
+
   &__list {
     padding-left: 40px;
     list-style: disc;
   }
-  
+
   &__btn {
     padding: 50px 0;
 
     @include media('<laptop'){
+      display: flex;
+      justify-content: center;
       padding-left: 50px;
     }
 
