--- a/src/sass/partials/_resources.scss
+++ b/src/sass/partials/_resources.scss
@@ -165,3 +165,180 @@
     }
 }
 
+.b-resources-ebooks {
+    padding: 80px 0;
+
+    @extend %wrapper;
+
+    &__title {
+        color: $text_dark;
+        text-transform: uppercase;
+        font-size: 22px;
+        text-align: center;
+        font-weight: 500;
+    }
+
+    &__content {
+        max-height: 460px;
+        padding-top: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        overflow: hidden;
+        transition: max-height $time_trans ease;
+
+        @include media('<desktop') {
+            max-height: 900px;
+            height: auto;
+        }
+
+        @include media('<tabletSm'){
+            max-height: 1580px;
+            height: auto;
+            flex-direction: initial;
+        }
+
+        @include media('<phoneLg'){
+            max-height: 1490px;
+        }
+
+        @include media('<phoneMd'){
+            max-height: 1540px;
+        }
+    }
+
+    &__toggler {
+        margin: 70px auto 0;
+        color: $black;
+
+        &:hover {
+            color: $active;
+        }
+
+        @include media('<tabletSm') {
+            position: static;
+        }
+    }
+
+    &.opened {
+        @include media('<tabletSm') {
+            padding: 40px 0;
+        }
+
+        .text {
+            &_opened {
+                display: inline;
+            }
+
+            &_closed {
+                display: none;
+            }
+        }
+
+
+        .b-resources-ebooks {
+            &__content {
+                max-height: 890px;
+
+                @include media('<desktop') {
+                    max-height: 1770px;
+                    height: auto;
+                }
+
+                @include media('<tabletSm') {
+                    max-height: 3280px;
+                    height: auto;
+                }
+            }
+        }
+    }
+}
+
+.b-resources-ebooks-list {
+    &__item {
+        width: 49%;
+        display: flex;
+        padding-bottom: 40px;
+
+        &:nth-child(odd) {
+            margin-right: 2%;
+        }
+
+        @include media('<desktop') {
+            width: 100%;
+
+            padding: 0 30px 40px 30px;
+            &:nth-child(odd) {
+                margin-right: 0;
+            }
+        }
+
+        @include media('<tabletSm') {
+            flex-direction: column;
+            padding: 0 30px 60px 30px;
+        }
+    }
+
+    &__img {
+        width: 230px;
+        min-width: 230px;
+        height: 400px;
+        margin-right: 40px;
+
+        @include media('<tabletSm') {
+            width: 250px;
+            min-width: 250px;
+            height: 420px;
+            margin: 0 auto;
+        }
+
+        @include media('<phoneLg') {
+            width: 200px;
+            min-width: 200px;
+            height: 300px;
+        }
+
+        img {
+            object-position: center;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.b-resources-ebook-desc {
+    &__title {
+        font-size: 22px;
+        text-transform: uppercase;
+        font-weight: 500;
+
+        @include media('<tabletSm') {
+            padding-top: 30px;
+        }
+    }
+
+    &__text {
+        padding-top: 15px;
+        color: $grey_about;
+    }
+
+    &__btn {
+        padding-top: 40px;
+
+        & > .b-btn {
+            min-width: 284px;
+
+            @include media('<tabletSm') {
+                min-width: 100%;
+                width: 100%;
+            }
+        }
+
+        @include media('<tabletSm') {
+            display: flex;
+            justify-content: center;
+            padding-top: 20px;
+        }
+    }
+}
+
